implemented linear models

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +69,10 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder, OrdinalEncoder\n",
+    "from sklearn import metrics as mt\n",
     "from boruta import BorutaPy\n",
-    "from sklearn.ensemble import RandomForestRegressor "
+    "from sklearn.ensemble import RandomForestRegressor \n",
+    "from sklearn.linear_model import LinearRegression, Lasso"
    ]
   },
   {
@@ -213,6 +215,24 @@
     "    rcorr = r - (r-1)**2/(n-1)\n",
     "    \n",
     "    return np.sqrt((chi2corr/n) / min(kcorr-1, rcorr-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def ml_error(model_name, y, y_hat):\n",
+    "    mae = mt.mean_absolute_error(y, y_hat)\n",
+    "    #mape = mt.mean_absolute_percentage_error(y, y_hat) # its being different. I didnt understand why yet\n",
+    "    mape = np.mean(np.abs( (y - y_hat) / y ))\n",
+    "    rmse = np.sqrt(mt.mean_squared_error(y, y_hat))\n",
+    "    return pd.DataFrame({'Model Name': model_name,\n",
+    "                         'MAE': mae,\n",
+    "                         'MAPE': mape,\n",
+    "                         'RMSE': rmse}, index=[0])"
    ]
   },
   {
@@ -3955,15 +3975,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = df6.loc[df6['date'] < spliter_date, df6.columns != 'sales']\n",
-    "y_train = df6.loc[df6['date'] < spliter_date, ['sales']]\n",
+    "X_train = df6.loc[df6['date'] < spliter_date]\n",
+    "y_train = df6.loc[df6['date'] < spliter_date, 'sales']\n",
     "\n",
-    "X_test = df6.loc[df6['date'] >= spliter_date, df6.columns != 'sales']\n",
-    "y_test = df6.loc[df6['date'] >= spliter_date, ['sales']]"
+    "X_test = df6.loc[df6['date'] >= spliter_date]\n",
+    "y_test = df6.loc[df6['date'] >= spliter_date, 'sales']"
    ]
   },
   {
@@ -4077,7 +4097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -4107,7 +4127,7 @@
        " 'sales']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4139,6 +4159,415 @@
     "feature_add = ['date', 'sales']\n",
     "selected.extend(feature_add)\n",
     "selected"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine Learning Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['store',\n",
+       " 'promo',\n",
+       " 'store_type',\n",
+       " 'assortment',\n",
+       " 'competition_distance',\n",
+       " 'competition_open_since_month',\n",
+       " 'competition_open_since_year',\n",
+       " 'promo2',\n",
+       " 'promo2_since_week',\n",
+       " 'promo2_since_year',\n",
+       " 'competition_time_month',\n",
+       " 'promo_time_week',\n",
+       " 'day_of_week_sin',\n",
+       " 'day_of_week_cos',\n",
+       " 'month_sin',\n",
+       " 'month_cos',\n",
+       " 'day_sin',\n",
+       " 'day_cos',\n",
+       " 'week_of_year_sin',\n",
+       " 'week_of_year_cos',\n",
+       " 'date',\n",
+       " 'sales']"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = X_train[selected].drop(columns=['date'])\n",
+    "x_test = X_test[selected].drop(columns=['date'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aux1 = x_test.copy()\n",
+    "aux1['sales'] = y_test['sales']\n",
+    "\n",
+    "# predction\n",
+    "aux2 = aux1[['store', 'sales']].groupby('store').mean().reset_index().rename(columns={'sales': 'predictions'})\n",
+    "aux1 = aux1.merge(aux2, how='left', on='store')\n",
+    "yhat_baseline = aux1['predictions']\n",
+    "\n",
+    "# performance\n",
+    "baseline_result = ml_error('Average Model', np.expm1(y_test['sales']), np.expm1(yhat_baseline))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Model Name          MAE      MAPE         RMSE\n",
+       "0  Average Model  1354.800353  0.455051  1835.135542"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "baseline_result\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['store', 'promo', 'school_holiday', 'store_type', 'assortment',\n",
+       "       'competition_distance', 'competition_open_since_month',\n",
+       "       'competition_open_since_year', 'promo2', 'promo2_since_week',\n",
+       "       'promo2_since_year', 'in_promo', 'year', 'competition_time_month',\n",
+       "       'promo_time_week', 'state_holiday_christmas', 'state_holiday_easter',\n",
+       "       'state_holiday_public', 'state_holiday_regular', 'day_of_week_sin',\n",
+       "       'day_of_week_cos', 'month_sin', 'month_cos', 'day_sin', 'day_cos',\n",
+       "       'week_of_year_sin', 'week_of_year_cos'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = X_train.drop(columns=['sales', 'date'])\n",
+    "x_test = X_test.drop(columns=['sales', 'date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1860.269238</td>\n",
+       "      <td>0.285708</td>\n",
+       "      <td>2690.376341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression  1860.269238  0.285708  2690.376341"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "# fit\n",
+    "lr.fit(x_train, y_train)\n",
+    "\n",
+    "# prediction\n",
+    "yhat_lr = lr.predict(x_test)\n",
+    "\n",
+    "# performance\n",
+    "lr_result = ml_error('Linear Regression', np.expm1(y_test), np.expm1(yhat_lr))\n",
+    "lr_result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Regularized Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1890.157813</td>\n",
+       "      <td>0.28896</td>\n",
+       "      <td>2745.550239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model Name          MAE     MAPE         RMSE\n",
+       "0  Linear Regression - Lasso  1890.157813  0.28896  2745.550239"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "lrr = Lasso(alpha=0.01)\n",
+    "\n",
+    "# fit\n",
+    "lrr.fit(x_train, y_train)\n",
+    "\n",
+    "# prediction\n",
+    "yhat_lrr = lrr.predict(x_test)\n",
+    "\n",
+    "# performance\n",
+    "lrr_result = ml_error('Linear Regression - Lasso', np.expm1(y_test), np.expm1(yhat_lrr))\n",
+    "lrr_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1860.269238</td>\n",
+       "      <td>0.285708</td>\n",
+       "      <td>2690.376341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1890.157813</td>\n",
+       "      <td>0.288960</td>\n",
+       "      <td>2745.550239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model Name          MAE      MAPE         RMSE\n",
+       "0              Average Model  1354.800353  0.455051  1835.135542\n",
+       "0          Linear Regression  1860.269238  0.285708  2690.376341\n",
+       "0  Linear Regression - Lasso  1890.157813  0.288960  2745.550239"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([baseline_result, lr_result, lrr_result])"
    ]
   },
   {
