created class rossmann e created api

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3481,7 +3481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 202,
    "metadata": {
     "hidden": true
    },
@@ -3501,7 +3501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 203,
    "metadata": {
     "hidden": true
    },
@@ -3521,7 +3521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 204,
    "metadata": {
     "hidden": true
    },
@@ -3529,24 +3529,26 @@
    "source": [
     "rs = RobustScaler()\n",
     "# competition_distance\n",
-    "df5['competition_distance'] = rs.fit_transform(df5[['competition_distance']].values)"
+    "df5['competition_distance'] = rs.fit_transform(df5[['competition_distance']].values)\n",
+    "pickle.dump(rs, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_distance_rescaler.pkl', 'wb'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 205,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
    "source": [
     "# competition_time_month\n",
-    "df5['competition_time_month'] = rs.fit_transform(df5[['competition_time_month']].values)"
+    "df5['competition_time_month'] = rs.fit_transform(df5[['competition_time_month']].values)\n",
+    "pickle.dump(rs, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_time_month_rescaler.pkl', 'wb'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 206,
    "metadata": {
     "hidden": true
    },
@@ -3554,19 +3556,21 @@
    "source": [
     "mms = MinMaxScaler()\n",
     "# promo time week\n",
-    "df5['promo_time_week'] = mms.fit_transform(df5[['promo_time_week']].values)"
+    "df5['promo_time_week'] = mms.fit_transform(df5[['promo_time_week']].values)\n",
+    "pickle.dump(mms, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/promo_time_week_rescaler.pkl', 'wb'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 207,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
    "source": [
     "# year\n",
-    "df5['year'] = mms.fit_transform(df5[['year']].values)"
+    "df5['year'] = mms.fit_transform(df5[['year']].values)\n",
+    "pickle.dump(mms, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/year_rescaler.pkl', 'wb'))"
    ]
   },
   {
@@ -3589,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 208,
    "metadata": {
     "hidden": true
    },
@@ -3601,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 209,
    "metadata": {
     "hidden": true
    },
@@ -3609,12 +3613,13 @@
    "source": [
     "# store_type\n",
     "le = LabelEncoder()\n",
-    "df5['store_type'] = le.fit_transform(df5['store_type'])"
+    "df5['store_type'] = le.fit_transform(df5['store_type'])\n",
+    "pickle.dump(le, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/store_type_label_encoder.pkl', 'wb'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 210,
    "metadata": {
     "hidden": true
    },
@@ -3622,7 +3627,8 @@
    "source": [
     "# assortment\n",
     "oe = OrdinalEncoder(dtype='int64', categories=[['basic', 'extra', 'extended']])\n",
-    "df5['assortment'] = oe.fit_transform(df5[['assortment']].values)"
+    "df5['assortment'] = oe.fit_transform(df5[['assortment']].values)\n",
+    "pickle.dump(oe, open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/assortment_ordinal_encoder.pkl', 'wb'))"
    ]
   },
   {
@@ -5647,15 +5653,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(xgb, open('/home/biazotogabriel/repos/courses/ds_em_producao/model_rossmann.pkl', 'wb'))\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -6161,10 +6158,233 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pickle.dump(xgb, open('/home/biazotogabriel/repos/courses/ds_em_producao/model_rossmann.pkl', 'wb'))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rossmann Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rossman(object):\n",
+    "    def __init__(self):\n",
+    "        self.competition_distance_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_distance_rescaler.pkl', 'rb'))\n",
+    "        self.competition_time_month_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_time_month_rescaler.pkl', 'rb'))\n",
+    "        self.promo_time_week_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/promo_time_week_rescaler.pkl', 'rb'))\n",
+    "        self.year_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/year_rescaler.pkl', 'rb'))\n",
+    "        self.store_type_label_encoder = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/store_type_label_encoder.pkl', 'rb'))\n",
+    "        self.assortment_ordinal_encoder = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/assortment_ordinal_encoder.pkl', 'rb'))\n",
+    "\n",
+    "    def data_cleaning(self, df1):\n",
+    "        #rename\n",
+    "        old_cols = df1.columns\n",
+    "        new_cols = list(map(inflection.underscore, old_cols))\n",
+    "        df1.columns = new_cols\n",
+    "        df1['date'] = pd.to_datetime(df1['date'], )\n",
+    "        #fill NAs\n",
+    "        max_value = 10 * df1['competition_distance'].max()\n",
+    "        df1.loc[df1['competition_distance'].isna(), 'competition_distance'] = max_value\n",
+    "        df1['competition_open_since_month'] = df1.apply(lambda row: row['date'].month if math.isnan(row['competition_open_since_month']) else row['competition_open_since_month'], axis=1)\n",
+    "        df1['competition_open_since_year'] = df1.apply(lambda row: row['date'].year if math.isnan(row['competition_open_since_year']) else row['competition_open_since_year'], axis=1)\n",
+    "        df1['promo2_since_week'] = df1.apply(lambda row: row['date'].week if math.isnan(row['promo2_since_week']) else row['promo2_since_week'], axis=1)\n",
+    "        df1['promo2_since_year'] = df1.apply(lambda row: row['date'].year if math.isnan(row['promo2_since_year']) else row['promo2_since_year'], axis=1)\n",
+    "        df1.loc[df1['promo_interval'].isna(), 'promo_interval'] = ''\n",
+    "        #convert dtype\n",
+    "        df1['competition_open_since_month'] = df1['competition_open_since_month'].astype(int)\n",
+    "        df1['competition_open_since_year'] = df1['competition_open_since_year'].astype(int)\n",
+    "        df1['promo2_since_week'] = df1['promo2_since_week'].astype(int)\n",
+    "        df1['promo2_since_year'] = df1['promo2_since_year'].astype(int)\n",
+    "        #feature engenering\n",
+    "        # definir se a loja estava em promoção no dia da venda\n",
+    "        locale.setlocale(locale.LC_TIME, ('en_US', 'UTF-8'))\n",
+    "        df1['in_promo'] = df1[['date', 'promo_interval']].apply(lambda x: 1 if x['date'].strftime('%b') in x['promo_interval'].split(',') else 0, axis=1)\n",
+    "        \n",
+    "        return df1\n",
+    "    \n",
+    "    def feature_engineering(self, df2):\n",
+    "        df2['year'] = df2['date'].dt.year\n",
+    "        df2['month'] = df2['date'].dt.month\n",
+    "        df2['day'] = df2['date'].dt.day\n",
+    "        df2['week_of_year'] = df2['date'].dt.isocalendar().week.astype('int64')\n",
+    "        df2['year_week'] = df2['date'].dt.strftime('%Y-%W')\n",
+    "        df2['competition_since'] = pd.to_datetime({'year': df2['competition_open_since_year'],\n",
+    "                                                'month': df2['competition_open_since_month'],\n",
+    "                                                'day': 1})\n",
+    "        df2['competition_time_month'] = ((df2['date'] - df2['competition_since'])/30).apply(lambda x: x.days).astype(int)\n",
+    "        df2['promo_since'] = pd.to_datetime(df2['promo2_since_year'] * 1000 + df2['promo2_since_week'] * 10, format='%Y%W%w')\n",
+    "        df2['promo_since'] = df2['promo_since'] - timedelta(days=7)\n",
+    "        df2['promo_time_week'] = ((df2['date'] - df2['promo_since'])/7).apply(lambda x: x.days).astype(int)\n",
+    "        df2['assortment'] = df2['assortment'].map(lambda x: {'a': 'basic',\n",
+    "                                                            'b': 'extra',\n",
+    "                                                            'c': 'extended'}.get(x, x))\n",
+    "        df2['state_holiday'] = df2['state_holiday'].map(lambda x: {'a': 'public',\n",
+    "                                                                'b': 'easter',\n",
+    "                                                                'c': 'christmas',\n",
+    "                                                                '0': 'regular'}.get(x, x))\n",
+    "        df2 = df2[(df2['open'] != 0) & (df2['sales'] > 0)]\n",
+    "        cols_drop = ['customers', 'open', 'promo_interval']\n",
+    "        df2 = df2.drop(cols_drop, axis=1)\n",
+    "\n",
+    "        return df2\n",
+    "\n",
+    "        def data_preparation(self, df5):\n",
+    "            #fit_transform ??\n",
+    "            df5['competition_distance'] = self.competition_distance_rescaler.transform(df5[['competition_distance']].values)\n",
+    "            df5['competition_time_month'] = self.competition_time_month_rescaler.transform(df5[['competition_time_month']].values)\n",
+    "            df5['promo_time_week'] = self.promo_time_week_rescaler.transform(df5[['promo_time_week']].values)\n",
+    "            df5['year'] = self.year_rescaler.transform(df5[['year']].values)\n",
+    "\n",
+    "            df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "            df5['store_type'] = self.store_type_label_encoder.transform(df5['store_type'])\n",
+    "            df5['assortment'] = self.assortment_ordinal_encoder.transform(df5[['assortment']].values)\n",
+    "          \n",
+    "            df5['sales'] = np.log1p(df5['sales'])\n",
+    "            \n",
+    "            df5['day_of_week_sin'] = df5['day_of_week'].apply(lambda x: np.sin(x * (2. *  np.pi / 7)))\n",
+    "            df5['day_of_week_cos'] = df5['day_of_week'].apply(lambda x: np.cos(x * (2. *  np.pi / 7)))\n",
+    "\n",
+    "            df5['month_sin'] = df5['month'].apply(lambda x: np.sin(x * (2. *  np.pi / 12)))\n",
+    "            df5['month_cos'] = df5['month'].apply(lambda x: np.cos(x * (2. *  np.pi / 12)))\n",
+    "\n",
+    "            df5['day_sin'] = df5['day'].apply(lambda x: np.sin(x * (2. *  np.pi / 30)))\n",
+    "            df5['day_cos'] = df5['day'].apply(lambda x: np.cos(x * (2. *  np.pi / 30)))\n",
+    "\n",
+    "            df5['week_of_year_sin'] = df5['week_of_year'].apply(lambda x: np.sin(x * (2. *  np.pi / 52)))\n",
+    "            df5['week_of_year_cos'] = df5['week_of_year'].apply(lambda x: np.cos(x * (2. *  np.pi / 52)))\n",
+    "\n",
+    "            #Final cols selected according with boruta\n",
+    "            selected = [\n",
+    "                'store', \n",
+    "                'promo', \n",
+    "                'store_type', \n",
+    "                'assortment', \n",
+    "                'competition_distance',\n",
+    "                'competition_open_since_month', \n",
+    "                'competition_open_since_year', \n",
+    "                'promo2',\n",
+    "                'promo2_since_week', \n",
+    "                'promo2_since_year', \n",
+    "                'competition_time_month',\n",
+    "                'promo_time_week', \n",
+    "                'day_of_week_sin', \n",
+    "                'day_of_week_cos', \n",
+    "                'month_sin',\n",
+    "                'month_cos',\n",
+    "                'day_sin', \n",
+    "                'day_cos',\n",
+    "                'week_of_year_sin', \n",
+    "                'week_of_year_cos'] \n",
+    "\n",
+    "            feature_add = ['date', 'sales']\n",
+    "            selected.extend(feature_add)\n",
+    "\n",
+    "            return df5[selected]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API Handler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on all addresses.\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      " * Running on http://192.168.0.106:5000/ (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from flask import Flask, request, Response\n",
+    "from rossmann.Rossmann import Rossmann\n",
+    "import pickle\n",
+    "\n",
+    "# loading model\n",
+    "model = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/model_rossmann.pkl', 'rb'))\n",
+    "\n",
+    "# initialize API\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/rossmann/predict', methods=['POST'])\n",
+    "def rossmann_predict():\n",
+    "    test_json = request.get_json()\n",
+    "\n",
+    "    if test_json:\n",
+    "        if isinstance(test_json):\n",
+    "            test_raw = pd.DataFrame(test_json, index=[0])\n",
+    "        else:\n",
+    "            test_raw = pd.DataFrame(test_json, columns=test_json[0].keys())\n",
+    "\n",
+    "        pipeline = Rossmann()\n",
+    "        df1 = pipeline.data_cleaning(test_raw)\n",
+    "        df2 = pipeline.feature_engineering(df1)\n",
+    "        df3 = pipeline.data_preparation(df2)\n",
+    "        df_response = pipeline.get_prediction(model, test_raw, df3)\n",
+    "\n",
+    "        return df_response\n",
+    "\n",
+    "    else:\n",
+    "        return Response('{}', status=200, mimetype='application/json')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run('0.0.0.0')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API Tester"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
